--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 	<head>
 		<meta charset=utf-8>
-		<title>Erratic Signals</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>Irradiant Shards</title>
 		<style>
 			html,body { margin: 0; overflow: hidden; height: 100%; background: #000;}
 			canvas {width: 100%; height: 100%; image-rendering: -moz-crisp-edges; image-rendering: pixelated;}
